fix: :bug:  fix github plugin background-color inconsistent, fix element in intro page margin value too large.

--- a/src/css/intro/intro.scss
+++ b/src/css/intro/intro.scss
@@ -2,10 +2,6 @@
 	background: var(--color-content);
 }
 
-.content h2 {
-	margin: 0;
-}
-
 .shape {
 	height: 100vh;
 	width: 100%;
@@ -22,9 +18,9 @@
 .content-title {
 	font: var(--font-alt);
 	color: var(--color-title);
-	margin: 0;
 	line-height: 1;
-	padding-top: 5%;
+	margin-top: 0.8em;
+	margin-bottom: 0.3em;
 	animation: whiteShadow 1.5s ease-in-out infinite alternate;
 	text-shadow: rgb(69, 45, 45) 0 0 1px, rgb(255, 255, 251) 0 0 1px,
 		rgb(255, 255, 251) 0 0 2px;
@@ -48,14 +44,12 @@
 	color: #fff;
 	font: var(--font-alt);
 	font-size: 1.5em;
-	padding: 0.5em 0 0 0;
-	margin: 0;
+	margin-bottom: 2em;
 	text-shadow: 0 0 4px #ffffff;
 }
 
 .enter {
 	color: var(--color-enter);
-	margin: 3vh 0 0 0;
 	letter-spacing: 3px;
 	white-space: pre;
 	pointer-events: auto;
@@ -132,7 +126,7 @@
 	}
 	100% {
 		opacity: 0.7;
-		text-shadow: 0 0 20px rgba(255, 255, 255, 0);
+		text-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
 	}
 }
 
